@@ -34,6 +34,9 @@
 		<li> Bug Fix:  
 			Permissions step is now maintained between screens.
 		 (<em>Adam Franco</em>)</li>
+		<li> Bug Fix:  
+			Themesettings can now be changed.
+		 (<em>Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 1.8.6</h2>
 <h3>2007-10-02</h3>
