@@ -20,6 +20,11 @@ v. 1.8.7 (2007-10-02)
 		
 		Permissions step is now maintained between screens.
 		(Adam Franco)
+		
+	* Bug Fix: 
+		
+		Themesettings can now be changed.
+		(Adam Franco)
 	
 v. 1.8.6 (2007-10-02)
 ----------------------------------------------------
